<resources>
    <string name="app_name">MineralIdentyficationApp</string>
    <string name="title_activity_collection">activity_collection</string>
    <string name="title_activity_mineral">MineralActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <!-- activity_classification_result -->
    <string name="activity_classification_result_searchEditText_hint">Search Minerals</string>
    <string name="activity_classification_result_addToCollectionNewMineral">add New Mineral</string>
    <string name="activity_classification_result_addToCollectionAsImage">add Image</string>
    <string name="activity_classification_result_selectedMineral">no mineral selected</string>

    <!-- activity_collection -->
    <string name="activity_collection_buttonToggleFilters">Filters</string>

    <string name="activity_collection_collectionMineralName">Mineral name</string>
    <string name="activity_collection_collectionName">Name</string>
    <string name="activity_collection_collectionComment">Comment</string>
    <string name="activity_collection_collectionDiscoveryPlace">Discovery place</string>
    <string name="activity_collection_collectionMohsScale">Mohs scale</string>
    <string name="activity_collection_collectionValue">Value</string>
    <string name="activity_collection_collection_min">min</string>
    <string name="activity_collection_collection_max">max</string>
    <string name="activity_collection_collectionWeight">Weight</string>
    <string name="activity_collection_collectionSize">Size</string>
    <string name="activity_collection_collectionInclusion">is inclusion</string>
    <string name="activity_collection_collectionClarity">is clarity</string>
    <string name="activity_collection_collectionFilterSaveButton">save</string>
    <string name="activity_collectionTag">tag</string>

    <string name="activity_collectionEmptyTag">no selected</string>

    <!-- activity_login -->
    <string name="activity_login_editTextLogin">Login</string>
    <string name="activity_login_editTextUsername">Username</string>
    <string name="activity_login_editTextPassword">Password</string>
    <string name="activity_login_buttonLogin">Login</string>
    <string name="activity_login_textViewRegister">Don\'t have an account? Register here.</string>
    <string name="activity_login_switchToRegister">Register</string>

    <!-- activity_main -->
    <string name="activity_main_mainCameraButton">Take Picture</string>
    <string name="activity_main_mainGalleryButton">Gallery</string>
    <string name="activity_main_mainLoginButton">Login</string>
    <string name="activity_main_mainRegisterButton">Register</string>
    <string name="activity_main_mainCollectionButton">Collection</string>
    <string name="activity_main_mainUsersList">Users list</string>
    <string name="activity_main_mainUsersShareButton">Share</string>
    <string name="activity_main_mainCollectionTextView">Menu\n</string>

    <!-- activity_main_mineral -->
    <string name="activity_mineral_mineralImageViewPager">images</string>
    <string name="activity_mineral_mineralAddImageButton">camera</string>
    <string name="activity_mineral_mineralAddImageGalleryButton">gallery</string>
    <string name="activity_mineral_mineralDeleteImageButton">delete image</string>
    <string name="activity_mineral_mineralEditTextName">Name</string>
    <string name="activity_mineral_mineralEditTextValue">Value</string>
    <string name="activity_mineral_mineralEditTextWeight">Weight</string>
    <string name="activity_mineral_mineralEditTextSize">Size</string>
    <string name="activity_mineral_mineralEditTextInclusion">Inclusion</string>
    <string name="activity_mineral_mineralEditTextClarity">Clarity</string>
    <string name="activity_mineral_mineralEditTextComment">Comment</string>
    <string name="activity_mineral_mineralEditTextDiscoveryPlace">Discovery place</string>
    <string name="activity_mineral_mineralEditTextTags">Tags</string>
    <string name="activity_mineral_mineralAddTagButton">Add tag</string>
    <string name="activity_mineral_mineralMineralNameTextView">Mineral name</string>
    <string name="activity_mineral_mineralMohsScaleTextView">mineral name</string>
    <string name="activity_mineral_mineralChemicalFormulaTextView">mineral name</string>
    <string name="activity_mineral_mineralOccurrencePlaceTextView">mineral name</string>
    <string name="activity_mineral_mineralSaveMineralButton">save</string>
    <string name="activity_mineral_mineralDeleteMineralButton">delete</string>

    <!-- activity_register -->
    <string name="activity_register_registerEditTextNewUsername">New Username</string>
    <string name="activity_register_registerEditTextNewPassword">New Password</string>
    <string name="activity_register_registerRegisterButton">Register</string>

    <!-- item_mineral -->
    <string name="item_mineral_mineralItemMineralNameTextView">Mineral Name</string>
    <string name="item_mineral_mineralItemPercentageTextView"> </string>

    <!-- item_tags -->
    <string name="item_tags_itemTagsTextView">Example Text</string>
    <string name="item_tags_itemTagsDeleteButton">Delete</string>
    <!-- activity-sharing -->

    <string name="activity_mineral_sharingUsername">add user share\n</string>
    <string name="activity_mineral_sharingAddButton">share</string>
    <string name="sharingUserTypeButton_public">public</string>
    <string name="sharingUserTypeButton_private">private</string>
    <string name="activity_mineral_sharingChangeButton">change account type</string>


</resources>