<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/buttonToggleFilters"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="toggleFilters"
            android:text="@string/activity_collection_buttonToggleFilters" />

        <LinearLayout
            android:id="@+id/filterContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:orientation="vertical"
            android:visibility="gone">

            <EditText
                android:id="@+id/collectionMineralName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/activity_collection_collectionMineralName" />

            <EditText
                android:id="@+id/collectionName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/activity_collection_collectionName" />

            <Spinner
                android:id="@+id/collectionSpinnerTags"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/collectionComment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/activity_collection_collectionComment" />

            <EditText
                android:id="@+id/collectionDiscoveryPlace"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/activity_collection_collectionDiscoveryPlace" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/collectionMohsScale"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/activity_collection_collectionMohsScale" />

                <TextView
                    android:id="@+id/collectionValue"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/activity_collection_collectionValue" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/collectionMohsScaleMin"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:hint="@string/activity_collection_collection_min"
                    android:inputType="numberDecimal" />

                <EditText
                    android:id="@+id/collectionMohsScaleMax"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:hint="@string/activity_collection_collection_max"
                    android:inputType="numberDecimal" />

                <EditText
                    android:id="@+id/collectionValueMin"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:hint="@string/activity_collection_collection_min"
                    android:inputType="numberDecimal" />

                <EditText
                    android:id="@+id/collectionValueMax"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:hint="@string/activity_collection_collection_max"
                    android:inputType="numberDecimal" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/collectionWeight"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/activity_collection_collectionWeight" />

                <TextView
                    android:id="@+id/collectionSize"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/activity_collection_collectionSize" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/collectionWeightMin"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:hint="@string/activity_collection_collection_min"
                    android:inputType="numberDecimal" />

                <EditText
                    android:id="@+id/collectionWeightMax"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:hint="@string/activity_collection_collection_max"
                    android:inputType="numberDecimal" />

                <EditText
                    android:id="@+id/collectionSizeMin"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:hint="@string/activity_collection_collection_min"
                    android:inputType="numberDecimal" />

                <EditText
                    android:id="@+id/collectionSizeMax"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:hint="@string/activity_collection_collection_max"
                    android:inputType="numberDecimal" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <CheckBox
                    android:id="@+id/collectionInlcusion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_collection_collectionInclusion" />

                <CheckBox
                    android:id="@+id/collectionClarity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_collection_collectionClarity" />
            </LinearLayout>

            <Button
                android:id="@+id/collectionFilterSaveButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activity_collection_collectionFilterSaveButton" />

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".YourActivity">

            <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".CollectionActivity">

                <GridView
                    android:id="@+id/gridView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:numColumns="2" />

            </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</layout>