<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">


    <EditText
        android:id="@+id/registerEditTextNewUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/activity_register_registerEditTextNewUsername" />

    <EditText
        android:id="@+id/registerEditTextNewPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/registerEditTextNewUsername"
        android:layout_marginTop="16dp"
        android:inputType="textPassword"
        android:hint="@string/activity_register_registerEditTextNewPassword" />

    <Button
        android:id="@+id/registerRegisterButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/registerEditTextNewPassword"
        android:layout_marginTop="16dp"
        android:text="@string/activity_register_registerRegisterButton" />
</RelativeLayout>